--- a/css/templatemo-main.css
+++ b/css/templatemo-main.css
@@ -182,11 +182,43 @@ a:hover { color: #FF0; }
   padding-left: 15px;
   padding-right: 15px;
   padding-top: 15vh;
-  background-image: url(../img/2nd-section.jpg);
-  background-attachment: fixed;
+  /*background-color: #0b2e13;*/
+  background-image: linear-gradient(to left, #0b2e13 50%, #aaa);
+  /*background-attachment: fixed;*/
   min-height: 100vh;
   background-size: cover;
-  background-position: center center;
+  /*background-position: center center;*/
+}
+
+.service-content .first-content {
+  padding: 20px;
+  background-color: #0b2e13;
+  box-shadow: -10px 0px black;
+}
+
+.service-content h1 {
+  margin-top: 0px;
+  font-size: 72px;
+  color: #fff;
+  font-weight: 900;
+  text-transform: uppercase;
+  margin-bottom: 0px;
+}
+
+.service-content p {
+  margin-top: 0px;
+  font-size: 18px;
+  color: #fff;
+  font-weight: 500;
+  margin-bottom: 0px;
+}
+
+.service-content li {
+  margin-top: 0px;
+  font-size: 18px;
+  color: #fff;
+  font-weight: 500;
+  margin-bottom: 0px;
 }
 
 .service-content .left-text h4 {
@@ -245,11 +277,14 @@ h4, .h4 {
 
 .projects-content {
   padding-top: 20vh;
-  background-image: url(../img/3rd-section.jpg);
+
+  /*background-image: url(../img/3rd-section.jpg);*/
+  background-image: linear-gradient(to left, #aaa, #fff);
 }
 
 .projects-content .item img {
   width: 100%;
+  background-color: white;
 }
 
 .projects-content .item {
